--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="Index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="">Profile</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="">Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="Contact.html">Contacts</a></li>
                 </ul>
                 <div class="user links">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
