--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0" url="https://github.com/maxharsh6/Skill-Route/blob/main/HTML/Index.html">
+<meta url="https://github.com/maxharsh6/Skill-Route/blob/main/HTML/Index.html">
