--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/home_style.css">
+    <link rel="stylesheet" href=".CSS/home_style.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="Index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="">Profile</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="Contact.html">Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href=".HTML/Contact.html">Contacts</a></li>
                 </ul>
                 <div class="user links">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -90,67 +90,67 @@
 
             <!-- C Card -->
             <div class="card">
-                <img src="../Pics/c.jpg" alt="C">
+                <img src=".Pics/c.jpg" alt="C">
                 <h2>C</h2>
                 <p>C is used for server-side web development.</p>
-                <a href="c1.html">Learn More</a>
+                <a href=".HTML/c1.html">Learn More</a>
             </div>
 
             <!-- C++ Card -->
             <div class="card">
-                <img src="../Pics/c++.jpg" alt="C++">
+                <img src=".Pics/c++.jpg" alt="C++">
                 <h2>C++</h2>
                 <p>C++ is a powerful programming language.</p>
-                <a href="c++.html">Learn More</a>
+                <a href=".HTML/c++.html">Learn More</a>
             </div>
 
             <!-- JavaScript Card -->
             <div class="card">
-                <img src="../Pics/JavaScript.jpg" alt="JavaScript">
+                <img src=".Pics/JavaScript.jpg" alt="JavaScript">
                 <h2>JavaScript</h2>
                 <p>JavaScript is used for interactive web development.</p>
-                <a href="js.html">Learn More</a>
+                <a href=".HTML/js.html">Learn More</a>
             </div>
 
             <!-- Java Card -->
             <div class="card">
-                <img src="../Pics/java.png" alt="Java">
+                <img src=".Pics/java.png" alt="Java">
                 <h2>Java</h2>
                 <p>Java is widely used for enterprise applications.</p>
-                <a href="j.html">Learn More</a>
+                <a href=".HTML/j.html">Learn More</a>
             </div>
 
             <!-- Python Card -->
             <div class="card">
-                <img src="../Pics/python.jpg" alt="Python">
+                <img src=".Pics/python.jpg" alt="Python">
                 <h2>Python</h2>
                 <p>Python is a versatile language with many applications.</p>
-                <a href="python.html">Learn More</a>
+                <a href=".HTML/python.html">Learn More</a>
             </div>
 
             <!-- MySQL Card -->
             <div class="card">
-                <img src="../Pics/mysql.png" alt="MySQL">
+                <img src=".Pics/mysql.png" alt="MySQL">
                 <h2>MySQL</h2>
                 <p>MySQL is a popular relational database management system.</p>
-                <a href="mysql.html">Learn More</a>
+                <a href=".HTML/mysql.html">Learn More</a>
             </div>
 
 
             <!-- HTML Card -->
             <div class="card">
-                <img src="../Pics/html.jpg" alt="HTML">
+                <img src=".Pics/html.jpg" alt="HTML">
                 <h2>HTML</h2>
                 <p>HTML is a powerful programming language.</p>
-                <a href="h.html">Learn More</a>
+                <a href=".HTML/h.html">Learn More</a>
             </div>
 
             <!-- CSS Card -->
             <div class="card">
-                <img src="../Pics/css.jpg" alt="CSS">
+                <img src=".Pics/css.jpg" alt="CSS">
                 <h2>CSS</h2>
                 <p>CSS is a powerful programming language.</p>
-                <a href="cs.html">Learn More</a>
+                <a href=".HTML/cs.html">Learn More</a>
             </div>
         </div>
     </div>
