--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/home_style.css">
+    <link rel="stylesheet" href=".CSS/home_style.css">
 </head>
 
 <body>
@@ -90,7 +90,7 @@
 
             <!-- C Card -->
             <div class="card">
-                <img src="../Pics/c.jpg" alt="C">
+                <img src=".Pics/c.jpg" alt="C">
                 <h2>C</h2>
                 <p>C is used for server-side web development.</p>
                 <a href="c1.html">Learn More</a>
@@ -98,7 +98,7 @@
 
             <!-- C++ Card -->
             <div class="card">
-                <img src="../Pics/c++.jpg" alt="C++">
+                <img src=".Pics/c++.jpg" alt="C++">
                 <h2>C++</h2>
                 <p>C++ is a powerful programming language.</p>
                 <a href="c++.html">Learn More</a>
@@ -106,7 +106,7 @@
 
             <!-- JavaScript Card -->
             <div class="card">
-                <img src="../Pics/JavaScript.jpg" alt="JavaScript">
+                <img src=".Pics/JavaScript.jpg" alt="JavaScript">
                 <h2>JavaScript</h2>
                 <p>JavaScript is used for interactive web development.</p>
                 <a href="js.html">Learn More</a>
@@ -114,7 +114,7 @@
 
             <!-- Java Card -->
             <div class="card">
-                <img src="../Pics/java.png" alt="Java">
+                <img src=".Pics/java.png" alt="Java">
                 <h2>Java</h2>
                 <p>Java is widely used for enterprise applications.</p>
                 <a href="j.html">Learn More</a>
@@ -122,7 +122,7 @@
 
             <!-- Python Card -->
             <div class="card">
-                <img src="../Pics/python.jpg" alt="Python">
+                <img src=".Pics/python.jpg" alt="Python">
                 <h2>Python</h2>
                 <p>Python is a versatile language with many applications.</p>
                 <a href="python.html">Learn More</a>
@@ -130,7 +130,7 @@
 
             <!-- MySQL Card -->
             <div class="card">
-                <img src="../Pics/mysql.png" alt="MySQL">
+                <img src=".Pics/mysql.png" alt="MySQL">
                 <h2>MySQL</h2>
                 <p>MySQL is a popular relational database management system.</p>
                 <a href="mysql.html">Learn More</a>
@@ -139,7 +139,7 @@
 
             <!-- HTML Card -->
             <div class="card">
-                <img src="../Pics/html.jpg" alt="HTML">
+                <img src=".Pics/html.jpg" alt="HTML">
                 <h2>HTML</h2>
                 <p>HTML is a powerful programming language.</p>
                 <a href="h.html">Learn More</a>
@@ -147,7 +147,7 @@
 
             <!-- CSS Card -->
             <div class="card">
-                <img src="../Pics/css.jpg" alt="CSS">
+                <img src=".Pics/css.jpg" alt="CSS">
                 <h2>CSS</h2>
                 <p>CSS is a powerful programming language.</p>
                 <a href="cs.html">Learn More</a>
