--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     </header>
     <hr>
     <div class="main">
-        <img src="../Pics/4.png" alt="">
+        <img src="4.png" alt="">
         <div class="wrapper">
             <form>
                 <h1>Login</h1>
