--- a/sign up.html
+++ b/sign up.html
@@ -20,7 +20,7 @@
     </header>
     <hr>
     <div class="main">
-        <img src="../Pics/undraw_Programming_re_kg9v.png" alt="">
+        <img src="undraw_Programming_re_kg9v.png" alt="">
         <div class="wrapper">
             <form>
                 <h1>Sign Up</h1>
