--- a/c++.html
+++ b/c++.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C++ Learning Roadmap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/c.css">
+    <link rel="stylesheet" href="c.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -435,6 +435,12 @@
                     </div>
                 </div>
             </div>
+            <h3>Completion</h3>
+            <p class="per">0%</p>
+            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0"
+                aria-valuemax="100">
+                <div class="progress-bar" style="width: 0%"></div>
+            </div>
         </div>
     </div>
 
@@ -462,5 +468,6 @@
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="checkbox.js"></script>
 </body>
 </html>
